# telemetry_project

./: CMakeLists.txt  README.md
include/: accelerometer.hpp  gps.hpp  logger.hpp  telemetry_data.hpp
include/threads/: gps_thread.hpp  imu_thread.hpp  logger_thread.hpp
src/: accelerometer.cpp  gps.cpp  logger.cpp  main.cpp
src/threads/: gps_thread.cpp  imu_thread.cpp  logger_thread.cpp
